fixed edit date bug that was not showing date when editing property. also testing input date width and backgorund-color

--- a/styles/editProperty.module.css
+++ b/styles/editProperty.module.css
@@ -41,6 +41,11 @@
     color: #333;
 }
 
+.inputDate {
+    width: 100%;
+    background-color: #fff;
+}
+
 .select {
     height: 35px;
     font-size: 1rem;
